csrf in backbone fixes #1

--- a/skeleton/templates/todo.html
+++ b/skeleton/templates/todo.html
@@ -4,6 +4,7 @@
         <script src="/static/underscore-min.js"></script>
         <script src="/static/backbone-min.js"></script>
         <script src="/static/script.js"></script>
+        <script src="/static/csrf.js"></script>
         <style>
 
             .primary-1 { background-color: #BE9246 }
